4_advanced/samples/1.service-discovery.yml
--- ################################################################# secrets
apiVersion: v1
kind: Secret
metadata:
  name: helloworld-secrets
type: Opaque
data:
  username: aGVsbG93b3JsZA==
  password: cGFzc3dvcmQ=
  rootPassword: cm9vdHBhc3N3b3Jk
  database: aGVsbG93b3JsZA==

--- ################################################################# database
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  containers:
    - name: mysql
      image: mysql:5.7
      ports:
        - name: mysql-port
          containerPort: 3306

      resources:
        limits:
          memory: 500Mi
          cpu: 200m
        requests:
          memory: 500Mi
          cpu: 60m

--- ################################################################# database-service
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: database
  type: NodePort

--- ################################################################# helloworld-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  labels:
    app: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: k8s-demo
          image: wardviaene/k8s-demo
          command: ["node", "index-db.js"]
          ports:
            - name: nodejs-port
              containerPort: 3000

          resources:
            limits:
              memory: 200Mi
              cpu: 200m
            requests:
              memory: 160Mi
              cpu: 60m

--- ################################################################# helloworld-service
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
    - port: 3000
      protocol: TCP
