4_advanced/samples/3.nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-nginx
  labels:
    app: helloworld-nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.11
      ports:
        - containerPort: 80

      volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d

    - name: k8s-demo
      image: wardviaene/k8s-demo
      ports:
        - containerPort: 3000

  volumes:
    - name: config-volume
      configMap:
        name: nginx-config
        items:
          - key: reverseproxy.conf
            path: reverseproxy.conf # output file name

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-nginx-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: helloworld-nginx
  type: NodePort
